@@ -1,4 +1,3 @@
-import java.util.List;
 import java.util.ArrayList;
 /*
  * @lc app=leetcode id=39 lang=java
@@ -18,31 +17,31 @@ import java.util.ArrayList;
  * Given a set of candidate numbers (candidates) (without duplicates) and a
  * target number (target), find all unique combinations in candidates where the
  * candidate numbers sums to target.
- * 
+ *
  * The same repeated number may be chosen from candidates unlimited number of
  * times.
- * 
+ *
  * Note:
- * 
- * 
+ *
+ *
  * All numbers (including target) will be positive integers.
  * The solution set must not contain duplicate combinations.
- * 
- * 
+ *
+ *
  * Example 1:
- * 
- * 
+ *
+ *
  * Input: candidates = [2,3,6,7], target = 7,
  * A solution set is:
  * [
  * ⁠ [7],
  * ⁠ [2,2,3]
  * ]
- * 
- * 
+ *
+ *
  * Example 2:
- * 
- * 
+ *
+ *
  * Input: candidates = [2,3,5], target = 8,
  * A solution set is:
  * [
@@ -50,32 +49,43 @@ import java.util.ArrayList;
  * [2,3,3],
  * [3,5]
  * ]
- * 
- * 
+ *
+ *
  */
+import java.util.LinkedList;
+import java.util.List;
 
 // @lc code=start
 class Solution {
-    public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        List<List<Integer>> ans = new ArrayList<>();
-        dfsHelper(ans, new ArrayList<>(), candidates, target, 0);
-        return ans;
+
+  List<List<Integer>> ans = new LinkedList<>();
+  LinkedList<Integer> track = new LinkedList<>();
+  int trackSum = 0;
+
+  public List<List<Integer>> combinationSum(int[] candidates, int target) {
+    if (candidates.length == 0) {
+      return ans;
+    }
+    backtrack(candidates, 0, target);
+    return ans;
+  }
+
+  private void backtrack(int[] candidates, int start, int target) {
+    if (trackSum == target) {
+      ans.add(new LinkedList<>(track));
+      return;
+    }
+    if (trackSum > target) {
+      return;
     }
 
-    private void dfsHelper(List<List<Integer>> ans, List<Integer> temp, int[] candidates, int remain, int start) {
-        if (remain < 0) {
-            return;
-        }
-        if (remain == 0) {
-            ans.add(new ArrayList<>(temp));
-            return;
-        }
-        for (int i = start; i < candidates.length; i++) {
-            temp.add(candidates[i]);
-            // start is i but not i + 1, since i can reuse a number
-            dfsHelper(ans, temp, candidates, remain - candidates[i], i);
-            temp.remove(temp.size() - 1);
-        }
+    for (int i = start; i < candidates.length; i++) {
+      trackSum += candidates[i];
+      track.addLast(candidates[i]);
+      backtrack(candidates, i, target);
+      trackSum -= candidates[i];
+      track.removeLast();
     }
+  }
 }
 // @lc code=end
